Nettoyage du code en mettant toutes les variables dans le fichier parameters.toml et en y faisant référence seulement en début de code et non dans le corps du code

--- a/parameters.toml
+++ b/parameters.toml
@@ -152,7 +152,11 @@
         couleur_sac = "Rouge"
 
 
-
+[DataBase]
+    annee_scolaire = "23-24"
+    col_verif = "Inscription 23-24 VÉRIFIÉE"
+    col_saison = "Saison 2023-2024"
+    database_file = "export.xlsx"
 
 [AssoConnect]
     mail = "info@academie-ballet.fr"
